force-app/main/default/objects/Account/fields/DEMO__c.field-meta.xml
<CustomField>
    <fullName>DEMO__c</fullName>
    <label>DEMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>