force-app/main/default/objects/Account/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <label>Final</label>
    <length>255</length>
    <type>Text</type>
</CustomField>