force-app/main/default/objects/Account/fields/rgfre__c.field-meta.xml
<CustomField>
    <fullName>rgfre__c</fullName>
    <label>rgfre</label>
    <type>Date</type>
</CustomField>