force-app/main/default/objects/Account/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <label>TEST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>